--- a/bluej/lib/stylesheets/debugger.css
+++ b/bluej/lib/stylesheets/debugger.css
@@ -42,7 +42,7 @@
     -fx-vgap: 1em;
     -fx-padding: 1em;
     -fx-alignment: center;
-    -fx-border-color: lightgrey;
+    -fx-border-color: rgb(255, 146, 146);
     -fx-border-width: 1 0 0 0;
 }
 .debugger .debugger-buttons .button {
