--- a/bluej/lib/stylesheets/editor-help.css
+++ b/bluej/lib/stylesheets/editor-help.css
@@ -7,11 +7,11 @@
 }
 
 .frame-editor-key-help-pane .label {
-   -fx-text-fill: white;
+   -fx-text-fill: rgba(255, 235, 235, 0.6);
 }
 
 .frame-editor-key-help-pane .keyboard-key {
-   -fx-border-color: white;
+   -fx-border-color: rgba(255, 235, 235, 0.6);
    -fx-border-radius: 4;
    -fx-background-color: transparent;
    -fx-min-width: 1.5em;
@@ -21,7 +21,7 @@
 }
 
 .frame-tooltip {
-   -fx-text-fill: white;
+   -fx-text-fill: rgba(255, 235, 235, 0.6);
    -fx-background-color: hsba(0, 0%, 20%, 0.9);
    -fx-background-radius: 10;
    -fx-padding: 10 10 10 10;
