changed some images

--- a/bluej/lib/stylesheets/editor-tabs.css
+++ b/bluej/lib/stylesheets/editor-tabs.css
@@ -1,5 +1,5 @@
 .tabbed-editor > .tab-header-area > .tab-header-background {
-    -fx-background-color: hsb(0, 0%, 50%);
+    -fx-background-color: red;
 }
 
 .tabbed-editor > .tab-header-area .tab {
